// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default w/ error 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Problem field
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-yixhfo"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder={undefined}
          />
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            className="css-index--iconcontainer-1o7wiin"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance default w/ iconAlign left 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-1bkxplq=""
            disabled={false}
            placeholder="The placeholder "
          />
        </div>
        <div
          data-css-yntvgr=""
        >
          <div
            className="css-index--iconcontainer-1o7wiin"
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance default w/ iconAlign right 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-i8twf8=""
            disabled={false}
            placeholder="The placeholder "
          />
        </div>
        <div
          data-css-3rd0lv=""
        >
          <div
            className="css-index--iconcontainer-1o7wiin"
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance subtle w/ error 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Problem field
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-yixhfo"
        >
          <input
            data-css-1fhke6k=""
            disabled={false}
            placeholder={undefined}
          />
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            className="css-index--iconcontainer-1o7wiin"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance subtle w/ iconAlign left 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-1u1pc12=""
            disabled={false}
            placeholder="The placeholder "
          />
        </div>
        <div
          data-css-hgugth=""
        >
          <div
            className="css-index--iconcontainer-1o7wiin"
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots appearance subtle w/ iconAlign right 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-11d30wl=""
            disabled={false}
            placeholder="The placeholder "
          />
        </div>
        <div
          data-css-y2nw0k=""
        >
          <div
            className="css-index--iconcontainer-1o7wiin"
          >
            <svg
              aria-label="info icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots disabled compare 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <label
        data-css-w0yocm=""
      >
        <div
          data-css-n53zhn=""
        >
          Normal
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            className="css-zdxuo6"
          >
            <input
              data-css-ly16us=""
              disabled={false}
              placeholder="I'm normal, see"
            />
          </div>
        </div>
        <div
          data-css-1de0a6a=""
        >
          Still normal
        </div>
      </label>
      <label
        data-css-1y0hkm3=""
      >
        <div
          data-css-n53zhn=""
        >
          I'm not usable
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            className="css-zdxuo6"
          >
            <input
              data-css-ly16us=""
              disabled={true}
              placeholder="I'm untouchable"
            />
          </div>
        </div>
        <div
          data-css-1de0a6a=""
        >
          Neither am I
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots labels all 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder="Some placeholder"
          />
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels all w/error 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-yixhfo"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder="Some placeholder"
          />
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            className="css-index--iconcontainer-1o7wiin"
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels label 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder={undefined}
          />
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels label and subLabel 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder={undefined}
          />
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels none 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder={undefined}
          />
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels placeholder 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder="some placeholder"
          />
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots labels subLabel 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder={undefined}
          />
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots layouts full width 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid blue",
          "width": "500px",
        }
      }
    >
      <label
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          First
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            className="css-zdxuo6"
          >
            <input
              data-css-ly16us=""
              disabled={false}
              placeholder={undefined}
            />
          </div>
        </div>
      </label>
      <label
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Second
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            className="css-yixhfo"
          >
            <input
              data-css-ly16us=""
              disabled={false}
              placeholder={undefined}
            />
          </div>
          <div
            data-css-loo18p=""
          >
            <div
              className="css-index--iconcontainer-1o7wiin"
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
      <label
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Third
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            className="css-zdxuo6"
          >
            <input
              data-css-1fhke6k=""
              disabled={false}
              placeholder={undefined}
            />
          </div>
        </div>
      </label>
      <label
        data-css-w0yocm=""
        style={
          Object {
            "display": "block",
            "width": "100%",
          }
        }
      >
        <div
          data-css-n53zhn=""
        >
          Fourth
        </div>
        <div
          data-css-1r967oi=""
        >
          <div
            className="css-yixhfo"
          >
            <input
              data-css-1fhke6k=""
              disabled={false}
              placeholder={undefined}
            />
          </div>
          <div
            data-css-loo18p=""
          >
            <div
              className="css-index--iconcontainer-1o7wiin"
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots layouts right-aligned 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div
      style={
        Object {
          "border": "1px solid blue",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <label
          data-css-w0yocm=""
        >
          <div
            data-css-1r967oi=""
          >
            <div
              className="css-zdxuo6"
            >
              <input
                data-css-1u1pc12=""
                disabled={false}
                placeholder="Search"
              />
            </div>
            <div
              data-css-hgugth=""
            >
              <div
                className="css-index--iconcontainer-1o7wiin"
              >
                <svg
                  aria-label="search icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21.707 20.294L16.314 14.9C17.403 13.504 18 11.799 18 10c0-2.137-.833-4.144-2.344-5.656C14.145 2.832 12.137 2 10 2c-2.137 0-4.146.832-5.656 2.344C2.832 5.856 2 7.863 2 10c0 2.137.832 4.146 2.344 5.656C5.854 17.168 7.863 18 10 18c1.799 0 3.504-.596 4.9-1.685l5.393 5.393 1.414-1.414zM10 16c-1.603 0-3.109-.624-4.242-1.757C4.624 13.11 4 11.603 4 10c0-1.602.624-3.109 1.758-4.242C6.891 4.624 8.397 4 10 4c1.602 0 3.109.624 4.242 1.758C15.376 6.891 16 8.398 16 10c0 1.603-.624 3.11-1.758 4.243C13.109 15.376 11.602 16 10 16z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        style={
          Object {
            "border": "3px solid green",
            "height": "50px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots style override css 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <div>
      <div>
        <label
          data-css-lsmfyz=""
        >
          <div
            data-css-1r967oi=""
          >
            <div
              className="css-zdxuo6"
            >
              <input
                data-css-ly16us=""
                disabled={false}
                placeholder={undefined}
              />
            </div>
          </div>
        </label>
      </div>
      <div>
        <label
          data-css-lsmfyz=""
        >
          <div
            data-css-1r967oi=""
          >
            <div
              className="css-yixhfo"
            >
              <input
                data-css-ly16us=""
                disabled={false}
                placeholder={undefined}
              />
            </div>
            <div
              data-css-loo18p=""
            >
              <div
                className="css-index--iconcontainer-1o7wiin"
              >
                <svg
                  aria-label="warning icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2,12 C2,6.48608696 6.48608696,2 12,2 C17.513913,2 22,6.48608696 22,12 C22,17.513913 17.513913,22 12,22 C6.48608696,22 2,17.513913 2,12 Z M4,12 C4,16.4111304 7.58886957,20 12,20 C16.4111304,20 20,16.4111304 20,12 C20,7.58886957 16.4111304,4 12,4 C7.58886957,4 4,7.58886957 4,12 Z M12.5,18 L11.5,18 C11.2238576,18 11,17.7761424 11,17.5 L11,16.5 C11,16.2238576 11.2238576,16 11.5,16 L12.5,16 C12.7761424,16 13,16.2238576 13,16.5 L13,17.5 C13,17.7761424 12.7761424,18 12.5,18 Z M12.5,14 L11.5,14 C11.2238576,14 11,13.7761424 11,13.5 L11,7 C11,6.72385763 11.2238576,6.5 11.5,6.5 L12.5,6.5 C12.7761424,6.5 13,6.72385763 13,7 L13,13.5 C13,13.7761424 12.7761424,14 12.5,14 Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots whitelist name 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            name="myFieldNameOfPower"
            placeholder="I have a form name"
          />
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist onChange 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            onChange={[Function]}
            placeholder="Change me"
          />
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist title 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder={undefined}
            title="some title"
          />
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist type=date 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder="Date"
            type="date"
          />
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots whitelist type=password 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "padding": "24px",
      }
    }
  >
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          className="css-zdxuo6"
        >
          <input
            data-css-ly16us=""
            disabled={false}
            placeholder="Password"
            type="password"
          />
        </div>
      </div>
    </label>
  </div>
</div>
`;
